# subarasushi

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  dune-project  subarasushi.opam
.gitlab/issue_templates/: bug_report.md  feature_request.md
.gitlab/merge_request_templates/: merge_request_template.md
lib/: arena.ml  arena.mli  cards.ml  cards.mli  display.ml  display.mli  dune  player.ml  player.mli  points.ml  points.mli  strategies.ml  strategies.mli  terminal_interaction.ml  terminal_interaction.mli  utils.ml  utils.mli
test/: dune  test_arena.ml  test_cards.ml  test_display.ml  test_points.ml  test_strategies.ml  test_utils.ml  utils.ml
